      stuff into routerstatus_t. But once v3 directories are in use,
      clients and caches will no longer need to hold authority opinions;
      thus, the rationale for keeping the types separate is now gone.
    - Make the code used to reschedule and reattempt downloads more
      uniform.
    - Turn all 'Are we a directory server/mirror?' logic into a call to
      dirserver_mode().


Changes in version 0.2.0.7-alpha - 2007-09-21
  o New directory authorities:
    - Set up moria1 and tor26 as the first v3 directory authorities. See
      doc/spec/dir-spec.txt for details on the new directory design.

  o Major bugfixes (crashes):
    - Fix possible segfaults in functions called from
      rend_process_relay_cell(). Bugfix on 0.1.2.x.

  o Major bugfixes (bridges):
    - Fix a bug that made servers send a "404 Not found" in response to
      attempts to fetch their server descriptor. This caused Tor servers
      to take many minutes to establish reachability for their DirPort,
      and it totally crippled bridges. Bugfix on 0.2.0.5-alpha.
    - Make "UpdateBridgesFromAuthority" torrc option work: when bridge
      users configure that and specify a bridge with an identity
      fingerprint, now they will lookup the bridge descriptor at the
      default bridge authority via a one-hop tunnel, but once circuits
      are established they will switch to a three-hop tunnel for later
      connections to the bridge authority. Bugfix in 0.2.0.3-alpha.

  o Major bugfixes (hidden services):
    - Hidden services were choosing introduction points uniquely by
      hexdigest, but when constructing the hidden service descriptor
      they merely wrote the (potentially ambiguous) nickname.
    - Clients now use the v2 intro format for hidden service
      connections: they specify their chosen rendezvous point by identity
      digest rather than by (potentially ambiguous) nickname. Both
      are bugfixes on 0.1.2.x, and they could speed up hidden service